--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,9 @@
-.App {
-  text-align: center;
+.margintb-10{
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
+.marginrl-5{
+    margin-left: 5px;
+    margin-right: 5px;
 }
